// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conditional rendering other input shows up when other checkbox is checked 1`] = `
<div
  class="dietary-restrictions-wrapper"
>
  <div>
    <input
      id="isVegan"
      name="dietaryRestrictions.isVegan"
      type="checkbox"
      value=""
    />
    <label
      class="dietaryRestriction__label"
      for="isVegan"
    >
       
      Are you vegan?
    </label>
  </div>
  <div>
    <input
      id="isKosher"
      name="dietaryRestrictions.isKosher"
      type="checkbox"
      value=""
    />
    <label
      class="dietaryRestriction__label"
      for="isKosher"
    >
       
      Do you want kosher food?
    </label>
  </div>
  <div>
    <input
      id="isLactoseFree"
      name="dietaryRestrictions.isLactoseFree"
      type="checkbox"
      value=""
    />
    <label
      class="dietaryRestriction__label"
      for="isLactoseFree"
    >
       
      Can you handle Lactose?
    </label>
  </div>
  <div>
    <input
      id="other"
      name="dietaryRestrictions.other.isOther"
      type="checkbox"
      value=""
    />
    <label
      class="dietaryRestriction__label"
      for="other"
    >
       
      inne:
    </label>
  </div>
  <div />
</div>
`;

exports[`conditional rendering other input shows up when other checkbox is checked 2`] = `
<div
  class="dietary-restrictions-wrapper"
>
  <div>
    <input
      id="isVegan"
      name="dietaryRestrictions.isVegan"
      type="checkbox"
      value=""
    />
    <label
      class="dietaryRestriction__label"
      for="isVegan"
    >
       
      Are you vegan?
    </label>
  </div>
  <div>
    <input
      id="isKosher"
      name="dietaryRestrictions.isKosher"
      type="checkbox"
      value=""
    />
    <label
      class="dietaryRestriction__label"
      for="isKosher"
    >
       
      Do you want kosher food?
    </label>
  </div>
  <div>
    <input
      id="isLactoseFree"
      name="dietaryRestrictions.isLactoseFree"
      type="checkbox"
      value=""
    />
    <label
      class="dietaryRestriction__label"
      for="isLactoseFree"
    >
       
      Can you handle Lactose?
    </label>
  </div>
  <div>
    <input
      id="other"
      name="dietaryRestrictions.other.isOther"
      type="checkbox"
      value=""
    />
    <label
      class="dietaryRestriction__label"
      for="other"
    >
       
      inne:
    </label>
  </div>
  <div>
    <div
      class="other__input"
    >
      <input
        class="other"
        name="dietaryRestrictions.other.value"
        placeholder="Write anything we should know about your dietary restrictions"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`snapshot of app 1`] = `
<div>
  <div
    class="app"
  >
    <h1>
      My First Formik Form 
    </h1>
    <form>
      <input
        class="input"
        name="firstName"
        placeholder="Enter your name"
        type="text"
        value=""
      />
      <input
        class="input"
        name="lastName"
        placeholder="Enter your last name"
        type="text"
        value=""
      />
      <input
        class="input"
        name="age"
        placeholder="Enter your age"
        type="number"
        value="0"
      />
      <div
        class="gender-wrapper"
      >
        <input
          checked=""
          id="male"
          name="gender"
          type="radio"
          value="male"
        />
        <label
          for="male"
        >
           Male
        </label>
        <input
          id="female"
          name="gender"
          type="radio"
          value="female"
        />
        <label
          for="female"
        >
           Female
        </label>
      </div>
      <label>
        Phone Number:
         
        <input
          class="phoneNumber"
          name="phoneNumber"
          type="text"
          value="+48 "
        />
      </label>
      <div
        style="margin: 1rem 0px;"
      >
        <label
          for="color"
        >
          Select your destination 
        </label>
        <div
          class=" css-2b097c-container"
          id="color"
        >
          <div
            class=" css-yk16xz-control"
          >
            <div
              class=" css-1hwfws3"
            >
              <div
                class=" css-1wa3eu0-placeholder"
              >
                Select...
              </div>
              <div
                class="css-1g6gooi"
              >
                <div
                  class=""
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-2-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class=" css-1wy0on6"
            >
              <span
                class=" css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-19bqh2r"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="margin: 1rem 0px;"
      >
        <button
          type="button"
        >
          Select All
        </button>
      </div>
      <div
        class="dietary-restrictions-wrapper"
      >
        <div>
          <input
            id="isVegan"
            name="dietaryRestrictions.isVegan"
            type="checkbox"
            value=""
          />
          <label
            class="dietaryRestriction__label"
            for="isVegan"
          >
             
            Are you vegan?
          </label>
        </div>
        <div>
          <input
            id="isKosher"
            name="dietaryRestrictions.isKosher"
            type="checkbox"
            value=""
          />
          <label
            class="dietaryRestriction__label"
            for="isKosher"
          >
             
            Do you want kosher food?
          </label>
        </div>
        <div>
          <input
            id="isLactoseFree"
            name="dietaryRestrictions.isLactoseFree"
            type="checkbox"
            value=""
          />
          <label
            class="dietaryRestriction__label"
            for="isLactoseFree"
          >
             
            Can you handle Lactose?
          </label>
        </div>
        <div>
          <input
            id="other"
            name="dietaryRestrictions.other.isOther"
            type="checkbox"
            value=""
          />
          <label
            class="dietaryRestriction__label"
            for="other"
          >
             
            inne:
          </label>
        </div>
        <div />
      </div>
      <div>
        <div
          class="todosLabel"
        >
          Things you wish to not forget:
        </div>
        <div>
          <button
            type="button"
          >
            Add a thing
          </button>
        </div>
      </div>
      <div>
        <button
          class="outline"
          disabled=""
          type="button"
        >
          Reset
        </button>
        <button
          type="submit"
        >
          Submit
        </button>
      </div>
      <div
        style="margin: 1rem 0px;"
      >
        <pre
          style="background: rgb(246, 248, 250); font-size: .65rem; padding: .5rem;"
        >
          <strong>
            props
          </strong>
           = 
          {
  "values": {
    "firstName": "",
    "lastName": "",
    "age": 0,
    "gender": "male",
    "phoneNumber": "+48 ",
    "destination": [],
    "dietaryRestrictions": {
      "isVegan": false,
      "isKosher": false,
      "isLactoseFree": false,
      "other": {
        "isOther": false,
        "value": ""
      }
    },
    "todos": [],
    "todosEmpty": ""
  },
  "errors": {},
  "touched": {},
  "isSubmitting": false,
  "isValidating": false,
  "submitCount": 0,
  "dirty": false,
  "isValid": false,
  "initialValues": {
    "firstName": "",
    "lastName": "",
    "age": 0,
    "gender": "male",
    "phoneNumber": "+48 ",
    "destination": [],
    "dietaryRestrictions": {
      "isVegan": false,
      "isKosher": false,
      "isLactoseFree": false,
      "other": {
        "isOther": false,
        "value": ""
      }
    },
    "todos": [],
    "todosEmpty": ""
  },
  "validateOnChange": true,
  "validateOnBlur": true
}
        </pre>
      </div>
    </form>
    <button>
      CLICK ME IM SERVER
    </button>
  </div>
</div>
`;
